Name:               qltg
Version:            0.1
Synopsis:           ICFP 2011
License:            BSD3
License-file:       LICENSE
Author:             Tom Lokhorst,
                    Sjoerd Visscher,
                    Martijn van Steenbergen
Maintainer:         tom@lokhorst.eu
Category:           Game
Build-type:         Simple
Cabal-version:      >=1.2

Library
  Exposed-Modules:  Brain,
                    Cards,
                    Core,
                    Logic
  Hs-Source-Dirs:   src

Executable ltg
  Main-is:          ltg.hs
  Build-depends:    base >= 4 && < 5,
                    mtl >= 2.0.1 && < 2.2
  Hs-Source-Dirs:   src
