Name:               qltg
Version:            0.1
Synopsis:           ICFP 2011
License:            BSD3
License-file:       LICENSE
Author:             Tom Lokhorst,
                    Sjoerd Visscher,
                    Martijn van Steenbergen
Maintainer:         tom@lokhorst.eu
Category:           Game
Build-type:         Simple
Cabal-version:      >=1.2

Library
  Exposed-Modules:  Brain,
                    Cards,
                    Core,
                    Logic,
                    MonadBrain
  Hs-Source-Dirs:   src

Executable ltg
  Main-is:          ltg.hs
  Build-depends:    base >= 4 && < 5,
                    control-monad-free >= 0.5.3 && < 0.6,
                    mtl >= 2.0.1 && < 2.2,
                    vector >= 0.7 && < 0.8
  Hs-Source-Dirs:   src
